--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=cjs --outdir=dist --define:import.meta.dirname=__dirname",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:migrate:framework": "tsx scripts/migrate-add-framework.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
