Update Key Vault references and Dockerfile configuration
- Updated Key Vault name in arm-appsettings.json to "CareeerateSecretsVault" for consistency.
- Adjusted secret URIs in arm-appsettings.json to reflect the corrected Key Vault name.
- Modified Dockerfile to set environment variables for CI and removed the local build step.

--- a/arm-appsettings.json
+++ b/arm-appsettings.json
@@ -1,22 +1,22 @@
 {
   "properties": {
-    "AZURE_CLIENT_ID": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/AZURE-CLIENT-ID/5e985f65beb54d4fa8fcb42b023837c6)",
-    "AZURE_CLIENT_SECRET": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/AZURE-CLIENT-SECRET/2218c5d6c65f473b8ea83d0199bdc75a)",
-    "AZURE_TENANT_ID": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/AZURE-TENANT-ID/8e9ad2ed7d874f0dbd30a0b490f935f5)",
-    "B2C_TENANT_NAME": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/B2C-TENANT-NAME/834f942a799e43f18017b30835b7a2c5)",
-    "B2C_SIGNUP_SIGNIN_POLICY_NAME": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/B2C-SIGNUP-SIGNIN-POLICY-NAME/ac06442cf7ae4e3c9d9b7a208c93797a)",
-    "SESSION_SECRET": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/SESSION-SECRET/63fdaf8faf4e47ac809942a992da5d7d)",
-    "GITHUB_CLIENT_ID": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/GITHUB-CLIENT-ID/f1461871dffa46c8bac1f4560028cfc8)",
-    "GITHUB_CLIENT_SECRET": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/GITHUB-CLIENT-SECRET/55239b91cb98466680342f8389595912)",
-    "GITLAB_CLIENT_ID": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/GITLAB-CLIENT-ID/latest)",
-    "GITLAB_CLIENT_SECRET": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/GITLAB-CLIENT-SECRET/latest)",
-    "DATABASE_URL": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/DATABASE-URL/c53a52768dbb46e191c5be07d7cd43a2)",
-    "OPENAI_API_KEY": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/OPENAI-API-KEY/latest)",
-    "STRIPE_SECRET_KEY": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/STRIPE-SECRET-KEY/latest)",
-    "STRIPE_WEBHOOK_SECRET": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/STRIPE-WEBHOOK-SECRET/latest)",
-    "SENDGRID_API_KEY": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/SENDGRID-API-KEY/latest)",
-    "TWILIO_ACCOUNT_SID": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/TWILIO-ACCOUNT-SID/latest)",
-    "TWILIO_AUTH_TOKEN": "@Microsoft.KeyVault(SecretUri=https://careeratesecretsvault.vault.azure.net/secrets/TWILIO-AUTH-TOKEN/latest)",
+    "AZURE_CLIENT_ID": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/AZURE-CLIENT-ID/5e985f65beb54d4fa8fcb42b023837c6)",
+    "AZURE_CLIENT_SECRET": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/AZURE-CLIENT-SECRET/2218c5d6c65f473b8ea83d0199bdc75a)",
+    "AZURE_TENANT_ID": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/AZURE-TENANT-ID/8e9ad2ed7d874f0dbd30a0b490f935f5)",
+    "B2C_TENANT_NAME": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/B2C-TENANT-NAME/834f942a799e43f18017b30835b7a2c5)",
+    "B2C_SIGNUP_SIGNIN_POLICY_NAME": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/B2C-SIGNUP-SIGNIN-POLICY-NAME/ac06442cf7ae4e3c9d9b7a208c93797a)",
+    "SESSION_SECRET": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/SESSION-SECRET/63fdaf8faf4e47ac809942a992da5d7d)",
+    "GITHUB_CLIENT_ID": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/GITHUB-CLIENT-ID/f1461871dffa46c8bac1f4560028cfc8)",
+    "GITHUB_CLIENT_SECRET": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/GITHUB-CLIENT-SECRET/55239b91cb98466680342f8389595912)",
+    "GITLAB_CLIENT_ID": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/GITLAB-CLIENT-ID/latest)",
+    "GITLAB_CLIENT_SECRET": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/GITLAB-CLIENT-SECRET/latest)",
+    "DATABASE_URL": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/DATABASE-URL/c53a52768dbb46e191c5be07d7cd43a2)",
+    "OPENAI_API_KEY": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/OPENAI-API-KEY/latest)",
+    "STRIPE_SECRET_KEY": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/STRIPE-SECRET-KEY/latest)",
+    "STRIPE_WEBHOOK_SECRET": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/STRIPE-WEBHOOK-SECRET/latest)",
+    "SENDGRID_API_KEY": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/SENDGRID-API-KEY/latest)",
+    "TWILIO_ACCOUNT_SID": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/TWILIO-ACCOUNT-SID/latest)",
+    "TWILIO_AUTH_TOKEN": "@Microsoft.KeyVault(SecretUri=https://CareeerateSecretsVault.vault.azure.net/secrets/TWILIO-AUTH-TOKEN/latest)",
     "BASE_URL": "https://careerate-web.politetree-6f564ad5.westus2.azurecontainerapps.io",
     "NODE_ENV": "production",
     "PORT": "5000",
